--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <div class="London">
             <h3>LONDON</h3>
         </div>
+        clear
+
+
 
         <div class="Social">
             <a href="https://www.facebook.com">Facebook</a>
